# advent-of-code

./: .gitignore  LICENSE  advent-of-code.cabal
app/: Main.hs
src/: Advent.hs  NewSolution.hs
src/Solutions/: All.hs
src/Solutions/Y2015/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs
src/Solutions/Y2019/: Day01.hs  Day02.hs
src/Solutions/Y2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs
src/Solutions/Y2025/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
test/: Main.hs  Test.hs
